third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/borrow_return_mutable_borrow_bad.exp

Diagnostics:
error: mutable reference in local `return[0]` requires exclusive access but is borrowed
  ┌─ tests/reference-safety/v1-borrow-tests/borrow_return_mutable_borrow_bad.move:9:9
  │
7 │         let ref_x_f_g = &ref_x_f.g;
  │                         ---------- previous field borrow
8 │
9 │         (ref_x_f, ref_x_f_g)
  │         ^^^^^^^^^^^^^^^^^^^^ requirement enforced here
